tests/mm0_mmu/fail/bad-sort3241.mmu
-- bad modifier order
(sort s3241 provable strict free pure)